--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-torch>=2.0.0
-torchvision>=0.15.0
-numpy>=1.24.0
-matplotlib>=3.7.0
-tqdm>=4.65.0
-transformers>=4.30.0
-pillow>=8.3.2
-scikit-learn>=1.2.0 
+torch>=1.10.0
+torchvision>=0.11.0
+transformers>=4.18.0
+matplotlib>=3.5.0
+numpy>=1.21.0
+tqdm>=4.62.0
+scikit-learn>=1.0.0
+seaborn>=0.11.0
+pyyaml>=6.0.0
+pillow>=9.0.0
+scipy>=1.7.0 
