--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,7 @@ scikit-learn>=1.0.0
 seaborn>=0.11.0
 pyyaml>=6.0.0
 pillow>=9.0.0
-scipy>=1.7.0 
+scipy>=1.7.0
+packaging>=21.0
+tensorboard>=2.9.0
+pandas>=1.3.0 
